# retropixels-opengl

./: CMakeLists.txt
shaders/: sprite.fragment.glsl  sprite.vertex.glsl
src/: main.c  main.cpp
